2008-05-22  Jorn Baayen  <jorn@openedhand.com>

	* configure.ac:

	Require gupnp 0.10.1.99.

2008-05-22  Ross Burton  <ross@openedhand.com>

	* src/universal-cp/details-treeview.c:
	Display the device presentation URL (requires libgupnp from svn).

2008-05-15  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* configure.ac:

	Require the correct version of gupnp.

2008-05-15  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* NEWS:

	Prepare NEWS file for release.

2008-05-04  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:

	Add iterative browsing support: request 64 objects of a container, at
	a time and keep browsing till we get all objects.

2008-04-17  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/common/icons.c:

	Update soup_session_queue_message() callback signature according to
	the new API.

2008-04-15  Jorn Baayen  <jorn@openedhand.com>

	* configure.ac:
	* src/common/icons.c (get_icon_from_message),
	(schedule_icon_update), (unschedule_icon_update), (deinit_icons):
	* src/universal-cp/details-treeview.c (show_service_details),
	(show_device_details):

	Port to libsoup 2.4.

2008-04-02  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* NEWS:
	* README:

	Update NEWS and README files for next (0.3) release.

2008-04-02  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* configure.ac:

	Bump-up the version.

2008-04-02  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-controls.c:

	Remove now useless FIXME comments.

2008-04-01  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* data/gupnp-av-cp.desktop.in.in:
	* data/gupnp-network-light.desktop.in.in:
	* data/gupnp-universal-cp.desktop.in.in:

	Add icons to desktop entries.

2008-04-01  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* configure.ac:
	* data/Makefile.am:
	* data/gupnp-av-cp.desktop:
	* data/gupnp-av-cp.desktop.in.in:
	* data/gupnp-network-light.desktop:
	* data/gupnp-network-light.desktop.in.in:
	* data/gupnp-universal-cp.desktop: